--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -15,6 +15,7 @@ let url = `url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' wid
 		<meta name="generator" content={Astro.generator} />
 		<title>Andrew Luca | All In Developer</title>
 		<script defer src="https://cdn.splitbee.io/sb.js"></script>
+		<link rel="canonical" href="http://luca.md/" />
 	</head>
 	<body>
 		<div
