--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,7 +10,7 @@ let url = `url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' wid
 		<meta name="description" content="Full stack developer!" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/png" href="/favicon.png" />
-		<link rel="canonical" href="http://luca.md/" />
+		<link rel="canonical" href="https://luca.md/" />
 		<link rel="me" href="https://fosstodon.org/@iamandrewluca" />
 		<link rel="me" href="https://mstdn.md/@iamandrewluca" />
 		<meta name="generator" content={Astro.generator} />
