--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import { Image } from "@astrojs/image/components";
+import { Image } from "astro:assets";
 import Layout from "../layouts/Layout.astro";
 import { Socials } from "../components/Socials";
 import { Contributions } from "../components/Contributions";
