--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,7 +14,7 @@ let url = `url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' wid
 		<link rel="me" href="https://fosstodon.org/@iamandrewluca" />
 		<link rel="me" href="https://mstdn.md/@iamandrewluca" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Andrew Luca | All In Developer</title>
+		<title>Andrei Luca | All In Developer</title>
 		<script defer src="https://cdn.splitbee.io/sb.js"></script>
 	</head>
 	<body>
