--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,7 +19,7 @@ import { Contributions } from "../components/Contributions";
 					class="mx-auto mb-5 h-32 w-32 rounded-full shadow-xl"
 					alt="My profile picture"
 				/>
-				<h1 class="mb-3 text-3xl">Andrew Luca</h1>
+				<h1 class="mb-3 text-3xl">Andrei Luca</h1>
 				<span class="inline-block rounded bg-gray-200 px-3 py-2 text-sm">
 					❤️&nbsp;&nbsp;<code>All In Developer</code>
 				</span>
