--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,9 +20,12 @@ import { Contributions } from "../components/Contributions";
 					alt="My profile picture"
 				/>
 				<h1 class="mb-3 text-3xl">Andrei Luca</h1>
-				<span class="inline-block rounded bg-gray-200 px-3 py-2 text-sm">
+				<a
+					href="https://allindevelopers.com"
+					class="inline-block rounded bg-gray-200 px-3 py-2 text-sm hover:bg-green-300"
+				>
 					❤️&nbsp;&nbsp;<code>All In Developer</code>
-				</span>
+				</a>
 			</div>
 			<div class="col-span-2 flex items-center p-5">
 				<Socials />
