fix: eager load avatar image

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,6 +18,7 @@ import { Contributions } from "../components/Contributions";
 					format="webp"
 					class="mx-auto mb-5 h-32 w-32 rounded-full shadow-xl"
 					alt="My profile picture"
+					loading="eager"
 				/>
 				<h1 class="mb-3 text-3xl">Andrei Luca</h1>
 				<a
