--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import { Image } from "astro:assets";
 import Layout from "../layouts/Layout.astro";
 import { Socials } from "../components/Socials";
 import { Contributions } from "../components/Contributions";
+import { avatarUrl } from "../utils";
 ---
 
 <Layout>
@@ -12,7 +13,7 @@ import { Contributions } from "../components/Contributions";
 		>
 			<div class="border-b p-5 text-center md:border-b-0 md:border-r">
 				<Image
-					src="https://gravatar.com/avatar/3d8d36a4c7e54969b9659a9f46d2f392?size=256"
+					src={avatarUrl}
 					width={256}
 					height={256}
 					format="webp"
