feat: add blurred avatar placeholder

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,7 +17,7 @@ import { avatarUrl } from "../utils";
 					width={256}
 					height={256}
 					format="webp"
-					class="mx-auto mb-5 h-32 w-32 rounded-full shadow-xl"
+					class="mx-auto mb-5 h-32 w-32 rounded-full bg-avatar-blur bg-cover bg-no-repeat shadow-xl"
 					alt="My profile picture"
 					loading="eager"
 				/>
