feat: try fetchpriority on avatar

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,7 +19,7 @@ import { avatarUrl } from "../utils";
 					format="webp"
 					class="mx-auto mb-5 h-32 w-32 rounded-full bg-avatar-blur bg-cover bg-no-repeat shadow-xl"
 					alt="My profile picture"
-					loading="eager"
+					fetchpriority="high"
 				/>
 				<h1 class="mb-3 text-3xl">Andrei Luca</h1>
 				<a
