--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -15,7 +15,7 @@ let url = `url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' wid
 		<link rel="canonical" href="https://luca.md/" />
 		<meta name="generator" content={Astro.generator} />
 		<title>Andrei Luca | All In Developer</title>
-		<script defer src="https://cdn.splitbee.io/sb.js"></script>
+		<script is:inline defer src="https://cdn.splitbee.io/sb.js"></script>
 	</head>
 	<body>
 		<div
