--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import { Socials } from "../components/Socials";
 import { Contributions } from "../components/Contributions";
 import { CalendarCountTextUpdate } from "../components/CalendarCountTextUpdate";
 import { avatarUrl } from "../utils";
+import { Calendar } from "../components/Calendar";
 ---
 
 <Layout>
@@ -35,7 +36,11 @@ import { avatarUrl } from "../utils";
 				<Socials />
 			</div>
 		</div>
-		<Contributions />
-		<CalendarCountTextUpdate client:load />
+		<Contributions>
+			<Calendar>
+				<!-- Who the fuck does this 🤣 -->
+				<CalendarCountTextUpdate client:load />
+			</Calendar>
+		</Contributions>
 	</main>
 </Layout>
