refactor: convert icons to astro

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import { Image } from "astro:assets";
 import Layout from "../layouts/Layout.astro";
-import { Socials } from "../components/Socials";
+import Socials from "../components/Socials.astro";
 import { Contributions } from "../components/Contributions";
 import { CalendarCountTextUpdate } from "../components/CalendarCountTextUpdate";
 import { avatarUrl } from "../utils";
