--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import { Image } from "astro:assets";
 import Layout from "../layouts/Layout.astro";
 import Socials from "../components/Socials.astro";
-import { Contributions } from "../components/Contributions";
+import Contributions from "../components/Contributions.astro";
 import { CalendarCountTextUpdate } from "../components/CalendarCountTextUpdate";
 import { avatarUrl } from "../utils";
 import { Calendar } from "../components/Calendar";
