--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,6 @@
 import { Image } from "astro:assets";
 import Layout from "../layouts/Layout.astro";
 import Socials from "../components/Socials.astro";
-import { CalendarCountTextUpdate } from "../components/CalendarCountTextUpdate";
 import { avatarUrl, intersperse } from "../utils";
 import { Calendar } from "../components/Calendar";
 import { providers } from "../utils/providers";
@@ -39,10 +38,26 @@ import Provider from "../components/Provider.astro";
 		</div>
 		<div class="overflow-x-auto rounded-2xl bg-white shadow-2xl">
 			<div class="min-h-[259px] min-w-[924px] p-10">
-				<Calendar>
-					<!-- Who the fuck does this 🤣 -->
-					<CalendarCountTextUpdate client:load />
-				</Calendar>
+				<Calendar />
+				<script>
+					let selector = ".react-activity-calendar__count";
+					let element = globalThis.document.querySelector(selector);
+					let textContent = element?.textContent;
+
+					if (element && textContent) {
+						let count = Number.parseInt(textContent);
+						let countPerDay = Math.round(count / 365);
+
+						let html = String.raw;
+
+						element.innerHTML = html`
+							<span>${textContent}</span>
+							<span class="animate-fade-down animate-delay-1000">
+								Almost ${countPerDay} per day 🚀
+							</span>
+						`;
+					}
+				</script>
 
 				<div class="text-sm">
 					<span>Sources:</span>
