fix: adjust allin link

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,7 +24,7 @@ import avatarSrc from "../assets/avatar.jpg";
 				/>
 				<h1 class="mb-3 text-3xl">Andrei Luca</h1>
 				<a
-					href="https://allindevelopers.com"
+					href="https://github.com/allindevelopers"
 					class="inline-block rounded bg-gray-200 px-3 py-2 text-sm hover:bg-green-300"
 				>
 					❤️&nbsp;&nbsp;<code>All In Developer</code>
