--- a/src/components/Socials.astro
+++ b/src/components/Socials.astro
@@ -1,30 +1,12 @@
 ---
-import IconX from "../components/icons/IconX.astro";
 import IconYouTube from "../components/icons/IconYouTube.astro";
 import IconGitHub from "../components/icons/IconGitHub.astro";
 import IconLinkedin from "../components/icons/IconLinkedin.astro";
 
 let socials = [
-	{
-		url: "/x",
-		title: "x.com",
-		icon: IconX,
-	},
-	{
-		url: "/youtube",
-		title: "youtube.com",
-		icon: IconYouTube,
-	},
-	{
-		url: "/github",
-		title: "github.com",
-		icon: IconGitHub,
-	},
-	{
-		url: "/linkedin",
-		title: "linkedin.com",
-		icon: IconLinkedin,
-	},
+	{ url: "/github", title: "github.com", icon: IconGitHub },
+	{ url: "/linkedin", title: "linkedin.com", icon: IconLinkedin },
+	{ url: "/youtube", title: "youtube.com", icon: IconYouTube },
 ];
 ---
 
