--- a/src/components/Socials.astro
+++ b/src/components/Socials.astro
@@ -1,14 +1,16 @@
 ---
 import IconGitHub from "../components/icons/IconGitHub.astro";
 import IconLinkedin from "../components/icons/IconLinkedin.astro";
+import IconDev from "../components/icons/IconDev.astro";
 
 let socials = [
 	{ url: "/github", title: "github.com", icon: IconGitHub },
 	{ url: "/linkedin", title: "linkedin.com", icon: IconLinkedin },
+	{ url: "/dev", title: "dev.to", icon: IconDev },
 ];
 ---
 
-<ul class="mx-auto inline-grid grid-cols-2 gap-2 sm:max-w-md">
+<ul class="mx-auto inline-grid grid-cols-3 gap-2 sm:max-w-md">
 	{
 		socials.map((social) => (
 			<li>
